--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import "../styles/index.scss";
+
 export interface Props {
 	title: string;
 }
@@ -34,8 +36,8 @@ const { title } = Astro.props;
 		}
 		html {
 			font-family: system-ui, sans-serif;
-			background-color: #F6F6F6;
-			color: #222;
+			/* background-color: #F6F6F6;
+			color: #222; */
 		}
 		code {
 			font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
