--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import { Panel } from '../components/Panel';
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<Panel client:load />
-		<Panel client:load />
+		<Panel client:only />
+		<Panel client:only />
 	</main>
 </Layout>
 
