--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,5 @@
 ---
 import "../styles/index.scss";
-
 export interface Props {
 	title: string;
 }
@@ -21,7 +20,7 @@ const { title } = Astro.props;
 		<slot />
 	</body>
 </html>
-<style is:global>
+<style is:global lang="scss">
 	@import '@acab/reset.css' layer(reset);
 	@layer reset, base, page, components, utilities, overrides;
 	
