--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,5 +21,8 @@ import PanelGroup from '../components/PanelGroup.astro';
 </Layout>
 
 <style>
-	
+	main {
+		@apply flex;
+		@apply w-full h-full;
+	}
 </style>
