--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,6 @@ import PanelGroup from '../components/PanelGroup.astro';
 <style>
 	main {
 		@apply flex;
-		@apply w-full h-full;
+		@apply w-full h-screen;
 	}
 </style>
